feat: Trading leaderboard points integration and SDK version display

--- a/packages/i18n/locales/de.json
+++ b/packages/i18n/locales/de.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "Nicht realisierter Gewinn/Verlust",
   "common.realizedPnl": "Realisierter Gewinn/Verlust",
   "common.pnl": "Gewinn/Verlust",
+  "common.points": "Punkte",
   "common.totalValue": "Gesamtwert",
   "common.address": "Adresse",
   "common.address.search.placeholder": "Adresse suchen",
