--- a/packages/i18n/locales/es.json
+++ b/packages/i18n/locales/es.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "PnL no realizado",
   "common.realizedPnl": "PnL realizado",
   "common.pnl": "P&L",
+  "common.points": "Puntos",
   "common.totalValue": "Valor total",
   "common.address": "Dirección",
   "common.address.search.placeholder": "Buscar dirección",
