--- a/packages/i18n/locales/fr.json
+++ b/packages/i18n/locales/fr.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "PnL non réalisé",
   "common.realizedPnl": "PnL réalisé",
   "common.pnl": "P&L",
+  "common.points": "Points",
   "common.totalValue": "Valeur totale",
   "common.address": "Adresse",
   "common.address.search.placeholder": "Rechercher une adresse",
