--- a/packages/i18n/locales/id.json
+++ b/packages/i18n/locales/id.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "PnL Belum Direalisasi",
   "common.realizedPnl": "PnL Direalisasi",
   "common.pnl": "Laba/Rugi",
+  "common.points": "Poin",
   "common.totalValue": "Total nilai",
   "common.address": "Alamat",
   "common.address.search.placeholder": "Cari alamat",
