--- a/packages/i18n/locales/it.json
+++ b/packages/i18n/locales/it.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "P/L non realizzato",
   "common.realizedPnl": "P/L realizzato",
   "common.pnl": "P&L",
+  "common.points": "Punti",
   "common.totalValue": "Valore totale",
   "common.address": "Indirizzo",
   "common.address.search.placeholder": "Cerca indirizzo",
