--- a/packages/i18n/locales/ja.json
+++ b/packages/i18n/locales/ja.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "未実現損益",
   "common.realizedPnl": "実現損益",
   "common.pnl": "損益",
+  "common.points": "ポイント",
   "common.totalValue": "総価値",
   "common.address": "アドレス",
   "common.address.search.placeholder": "アドレスを検索",
