--- a/packages/i18n/locales/ko.json
+++ b/packages/i18n/locales/ko.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "미실현 손익",
   "common.realizedPnl": "실현 손익",
   "common.pnl": "손익",
+  "common.points": "포인트",
   "common.totalValue": "총 가치",
   "common.address": "주소",
   "common.address.search.placeholder": "주소 검색",
