--- a/packages/i18n/locales/nl.json
+++ b/packages/i18n/locales/nl.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "Ongerealiseerde W/V",
   "common.realizedPnl": "Gerealiseerde W/V",
   "common.pnl": "Winst/Verlies",
+  "common.points": "Punten",
   "common.totalValue": "Totale waarde",
   "common.address": "Adres",
   "common.address.search.placeholder": "Zoek adres",
