--- a/packages/i18n/locales/pl.json
+++ b/packages/i18n/locales/pl.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "Niezrealizowany PnL",
   "common.realizedPnl": "Zrealizowany PnL",
   "common.pnl": "Zysk/Strata",
+  "common.points": "Punkty",
   "common.totalValue": "Wartość całkowita",
   "common.address": "Adres",
   "common.address.search.placeholder": "Wyszukaj adres",
