--- a/packages/i18n/locales/pt.json
+++ b/packages/i18n/locales/pt.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "Lucro/Prejuízo não realizado",
   "common.realizedPnl": "Lucro/Prejuízo realizado",
   "common.pnl": "P&L",
+  "common.points": "Pontos",
   "common.totalValue": "Valor total",
   "common.address": "Endereço",
   "common.address.search.placeholder": "Buscar endereço",
