--- a/packages/i18n/locales/vi.json
+++ b/packages/i18n/locales/vi.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "Lãi/lỗ chưa thực hiện",
   "common.realizedPnl": "Lãi/lỗ đã thực hiện",
   "common.pnl": "Lãi/Lỗ",
+  "common.points": "Điểm",
   "common.totalValue": "Tổng giá trị",
   "common.address": "Địa chỉ",
   "common.address.search.placeholder": "Tìm kiếm địa chỉ",
