--- a/packages/i18n/locales/en.json
+++ b/packages/i18n/locales/en.json
@@ -62,6 +62,7 @@
   "common.unrealizedPnl": "Unrealized PnL",
   "common.realizedPnl": "Realized PnL",
   "common.pnl": "PnL",
+  "common.points": "Points",
   "common.totalValue": "Total value",
   "common.address": "Address",
   "common.address.search.placeholder": "Search address",
