--- a/packages/i18n/locales/uk.json
+++ b/packages/i18n/locales/uk.json
@@ -62,7 +62,7 @@
   "common.unrealizedPnl": "Нереалізований PnL",
   "common.realizedPnl": "Реалізований PnL",
   "common.pnl": "Прибуток/Збиток",
-  "common.points": "Очки",
+  "common.points": "Бали",
   "common.totalValue": "Загальна вартість",
   "common.address": "Адреса",
   "common.address.search.placeholder": "Пошук адреси",
