--- a/packages/i18n/locales/en.json
+++ b/packages/i18n/locales/en.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "Listing",
   "announcement.type.maintenance": "Maintenance",
   "announcement.type.delisting": "Delisting",
+  "announcement.type.campaign": "Campaign",
   "maintenance.dialog.title": "System upgrade in progress",
   "maintenance.dialog.description": "Sorry, {{brokerName}} is temporarily unavailable due to a scheduled upgrade. The service is expected to be back by {{endDate}}.",
   "maintenance.tips.description": "{{brokerName}} will be temporarily unavailable for a scheduled upgrade from {{startDate}} to {{endDate}}.",
