--- a/packages/i18n/locales/it.json
+++ b/packages/i18n/locales/it.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "Quotazione",
   "announcement.type.maintenance": "Manutenzione",
   "announcement.type.delisting": "Rimozione dalla quotazione",
+  "announcement.type.campaign": "Campagna",
   "maintenance.dialog.title": "Aggiornamento del sistema in corso",
   "maintenance.dialog.description": "Ci dispiace, {{brokerName}} è temporaneamente non disponibile a causa di un aggiornamento programmato. Il servizio dovrebbe tornare disponibile entro {{endDate}}.",
   "maintenance.tips.description": "{{brokerName}} sarà temporaneamente non disponibile per un aggiornamento programmato da {{startDate}} a {{endDate}}.",
