--- a/packages/i18n/locales/nl.json
+++ b/packages/i18n/locales/nl.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "Notering",
   "announcement.type.maintenance": "Onderhoud",
   "announcement.type.delisting": "Verwijdering",
+  "announcement.type.campaign": "Campagne",
   "maintenance.dialog.title": "Systeemupgrade bezig",
   "maintenance.dialog.description": "Sorry, {{brokerName}} is tijdelijk niet beschikbaar vanwege een geplande upgrade. De dienst zal naar verwachting weer beschikbaar zijn op {{endDate}}.",
   "maintenance.tips.description": "{{brokerName}} zal tijdelijk niet beschikbaar zijn voor een geplande upgrade van {{startDate}} tot {{endDate}}.",
