--- a/packages/i18n/locales/pl.json
+++ b/packages/i18n/locales/pl.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "Notowanie",
   "announcement.type.maintenance": "Konserwacja",
   "announcement.type.delisting": "Wykreślenie z notowań",
+  "announcement.type.campaign": "Kampania",
   "maintenance.dialog.title": "Aktualizacja systemu w toku",
   "maintenance.dialog.description": "Przepraszamy, {{brokerName}} jest tymczasowo niedostępny z powodu zaplanowanej aktualizacji. Usługa powinna zostać przywrócona do {{endDate}}.",
   "maintenance.tips.description": "{{brokerName}} będzie tymczasowo niedostępny z powodu zaplanowanej aktualizacji od {{startDate}} do {{endDate}}.",
