--- a/packages/i18n/locales/ru.json
+++ b/packages/i18n/locales/ru.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "Листинг",
   "announcement.type.maintenance": "Обслуживание",
   "announcement.type.delisting": "Делистинг",
+  "announcement.type.campaign": "Кампания",
   "maintenance.dialog.title": "Выполняется обновление системы",
   "maintenance.dialog.description": "Извините, {{brokerName}} временно недоступен из-за запланированного обновления. Ожидается, что сервис будет восстановлен к {{endDate}}.",
   "maintenance.tips.description": "{{brokerName}} будет временно недоступен для запланированного обновления с {{startDate}} по {{endDate}}.",
