--- a/packages/i18n/locales/uk.json
+++ b/packages/i18n/locales/uk.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "Лістинг",
   "announcement.type.maintenance": "Обслуговування",
   "announcement.type.delisting": "Ділістинг",
+  "announcement.type.campaign": "Кампанія",
   "maintenance.dialog.title": "Триває оновлення системи",
   "maintenance.dialog.description": "Вибачте, {{brokerName}} тимчасово недоступний через заплановане оновлення. Очікується, що сервіс буде відновлено до {{endDate}}.",
   "maintenance.tips.description": "{{brokerName}} буде тимчасово недоступний через заплановане оновлення з {{startDate}} до {{endDate}}.",
