--- a/packages/i18n/locales/vi.json
+++ b/packages/i18n/locales/vi.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "Niêm yết",
   "announcement.type.maintenance": "Bảo trì",
   "announcement.type.delisting": "Hủy niêm yết",
+  "announcement.type.campaign": "Chiến dịch",
   "maintenance.dialog.title": "Hệ thống đang nâng cấp",
   "maintenance.dialog.description": "Xin lỗi, {{brokerName}} tạm thời không khả dụng do nâng cấp theo lịch trình. Dịch vụ dự kiến sẽ hoạt động lại vào {{endDate}}.",
   "maintenance.tips.description": "{{brokerName}} sẽ tạm thời không khả dụng để nâng cấp theo lịch trình từ {{startDate}} đến {{endDate}}.",
