--- a/packages/i18n/locales/zh.json
+++ b/packages/i18n/locales/zh.json
@@ -916,6 +916,7 @@
   "announcement.type.listing": "上架",
   "announcement.type.maintenance": "维护",
   "announcement.type.delisting": "下架",
+  "announcement.type.campaign": "活动",
   "maintenance.dialog.title": "系统升级进行中",
   "maintenance.dialog.description": "抱歉，由于计划中的升级，{{brokerName}}暂时不可用。服务预计将在{{endDate}}恢复。",
   "maintenance.tips.description": "{{brokerName}}将因计划中的升级从{{startDate}}到{{endDate}}暂时不可用。",
